<resources>
    <string name="app_name">Stopwatch</string>
    <string name="action_settings">Settings</string>
    <string name="zeros" translatable="false">00</string>
    <string name="StopwatchRunning">Stopwatch running</string>
    <string name="start">Start</string>
    <string name="Pause">Pause</string>
    <string name="Stop">Stop</string>
    <string name="new_lap">New lap</string>
    <string name="Share">Share</string>
    <string name="share_title">Ricardo Stopwatch : My time was {totalTime}</string>
    <string name="share_head_text">Share via</string>
    <string name="lap">Lap</string>
</resources>
